
Maybe the biggest change is the support to store functions in
'LuaValue's. This allows some nice tricks like letting the Lua side
register callbacks implemented in Lua, that will be eventually called
by the C++ side (and this works even with anonymous functions).

I also added a preliminary CMake-based build system. I plan to
eventually use it as the "official" build system, but currently it
does not handle the unit tests very well.

Additionally, Diluculum 0.5 sports the following contributions by
Jason Gauci:

 - Removed the dependency on Boost.Variant. Boost is still a
   dependency, and, frankly, Boost.Variant is much more elegant than
   the new implementation, but its removal will reduce the size of the
   binaries considerably, specially in debug builds. (This is a big
   change, too!)

 - Added a 'LuaValue::asObjectPtr()' method, that provides handy
   access in the C++ side to a pointer to objects instantiated in
   Lua.

 - Added a 'LuaValue::asInteger()' method.

Jason sent those more than two years ago! It is a shame I am releasing
them just now!

Other than that, a couple of bugs have been fixed.


Version 0.4 (02007-02-06)
~~~~~~~~~~~

This version added some changes to 'Diluculum/LuaWrappers.hpp' that
are not backward compatible. But the necessary changes are small and I
guess your compiler will tell you that something is wrong, instead of
generating poisoned code. New in this release:

 - When exporting class methods', it is no longer necessary to make
   two macro calls for each exported method. ('DILUCULUM_WRAP_METHOD()'
   is gone!)

 - Diluculum now has easier support to create dynamically loadable Lua
   modules, that is, those modules stored in a dynamic link library
   that are loaded with a 'require()' call in Lua.


Version 0.3.1 (02006-07-26)
~~~~~~~~~~~~~

Minor changes:

 - Using a fully qualified 'Diluculum::TypeMismatchError' in the
   definition of 'DILUCULUM_REGISTER_OBJECT()'. Yes, this was a bug...
